compiler/driver/tests/snapshots/diagnostics_snapshots__diag_flush_with_args.snap
---
source: compiler/driver/tests/diagnostics_snapshots.rs
expression: format_all_errors(& out)
---
error[E007]: function `flush` expects 0 arguments, found 1
  --> diag_flush_with_args.ny:1:20
   |
  1 | fn main() { flush(1) }
   |                    ^
   = label: wrong number of arguments
